<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.fit.ba.vjezbanjeib130011.fragments.LoginFragment"
    android:background="@drawable/login_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTitle"
        android:id="@+id/lblAppName"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:textColor="@color/Black"
        android:background="@drawable/txt_shape"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login"
        android:id="@+id/lblLogin"
        android:textSize="22sp"
        android:textColor="@color/Black"
        android:background="@drawable/txt_shape"
        android:layout_marginTop="15dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:layout_below="@+id/lblAppName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:textColorHint="@color/DarkGray"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/txt_shape"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textColorHint="@color/DarkGray"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:layout_below="@id/txtUsername"
        android:inputType="textPassword"
        android:background="@drawable/txt_shape"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSignIn"
        android:textSize="16sp"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:layout_alignBaseline="@+id/btnRegister"
        android:layout_alignBottom="@+id/btnRegister"
        android:layout_toEndOf="@+id/btnRegister"
        android:layout_marginStart="17dp"
        android:background="@drawable/btn_shape_selector"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/btnRegister"
        android:textSize="16sp"
        android:padding="10dp"
        android:textColor="@color/Black"
        android:layout_marginTop="22dp"
        android:layout_marginStart="21dp"
        android:background="@drawable/btn_shape_selector"
        android:layout_below="@+id/txtPassword"
        android:layout_alignStart="@+id/lblAppName" />

    <Button
        android:id="@+id/btnExitApp"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/btnExit"
        android:textSize="16sp"
        android:padding="10dp"
        android:textColor="@color/Black"
        android:background="@drawable/btn_shape_selector"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

</RelativeLayout>
