<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_item_product_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/app_background"
    tools:context="app.fit.ba.vjezbanjeib130011.fragments.ItemProductDetailsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvItemProductName"
        android:id="@+id/tvItemTitle"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/Black"
        android:background="@drawable/txt_shape"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="175dp"
        android:id="@+id/ivItemPhoto"
        android:background="@drawable/txt_shape"
        android:contentDescription="@string/ivItemPhoto"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tvItemTitle"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/spItemProductType"
        android:background="@drawable/spinner_shape"
        android:padding="10dp"
        android:spinnerMode="dialog"
        android:layout_marginTop="40dp"
        android:layout_marginStart="5dp"
        android:layout_alignTop="@+id/ivItemPhoto"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/ivItemPhoto"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvItemPrice"
        android:text="@string/tvItemProductPrice"
        android:textSize="16sp"
        android:textColor="@color/Black"
        android:background="@drawable/txt_shape"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/spItemProductType"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/ivItemPhoto" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvItemDescription"
        android:text="@string/tvItemProductDescription"
        android:textSize="16sp"
        android:textColor="@color/Black"
        android:background="@drawable/txt_shape"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ivItemPhoto"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAddToCart"
        android:textSize="16sp"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:background="@drawable/btn_shape_selector"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>

