<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.fit.ba.vjezbanjeib130011.fragments.HomeFragment"
    android:background="@drawable/app_background"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvProductsTitle"
        android:id="@+id/lblProductsTitle"
        android:textSize="22sp"
        android:textColor="@color/Black"
        android:background="@drawable/txt_shape"
        android:layout_marginTop="13sp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listViewProducts"
        android:background="@drawable/txt_shape"
        android:divider="@color/Black"
        android:dividerHeight="2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvName"
        android:layout_marginBottom="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvName"
        android:id="@+id/tvName"
        android:textSize="18sp"
        android:textColor="@color/Black"
        android:background="@drawable/txt_shape"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/lblProductsTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPrice"
        android:id="@+id/tvPrice"
        android:textSize="18sp"
        android:textColor="@color/Black"
        android:background="@drawable/txt_shape"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_alignBaseline="@+id/tvName"
        android:layout_alignBottom="@+id/tvName"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnGoToCart"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/btnGoToCart"
        android:textSize="16sp"
        android:padding="10dp"
        android:textColor="@color/Black"
        android:background="@drawable/btn_shape_selector"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>

