<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.fit.ba.vjezbanjeib130011.fragments.ManageOrderItemsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvChangeQuantity"
        android:id="@+id/tvChangeQuantity"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/White"
        android:layout_marginStart="20dp"
        android:layout_alignBottom="@+id/etChangeQuantity" />

    <EditText
        android:id="@+id/etChangeQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/etChangeQuantity"
        android:textSize="18sp"
        android:textColor="@color/White"
        android:inputType="number"
        android:padding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_alignStart="@+id/btnCloseFragment" />

    <Button
        android:id="@+id/btnCloseFragment"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/btnClose"
        android:textSize="16sp"
        android:padding="10dp"
        android:textColor="@color/White"
        android:layout_marginStart="10dp"
        android:layout_alignBaseline="@+id/btnRemoveItem"
        android:layout_alignBottom="@+id/btnRemoveItem"
        android:layout_toEndOf="@+id/tvChangeQuantity"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/btnRemoveItem"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/btnRemoveItem"
        android:textSize="16sp"
        android:padding="10dp"
        android:textColor="@color/White"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="9dp"
        android:layout_below="@+id/tvChangeQuantity"
        android:layout_alignEnd="@+id/tvChangeQuantity"
        android:layout_marginBottom="30dp"/>


</RelativeLayout>
