<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.fit.ba.vjezbanjeib130011.fragments.RegisterFragment"
    android:background="@drawable/app_background"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMyProfile"
        android:id="@+id/tvUserProfileTitle"
        android:textSize="22sp"
        android:padding="10dp"
        android:textColor="@color/Black"
        android:background="@drawable/txt_shape"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:background="@drawable/txt_non_editable"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tvUserProfileTitle"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lastname"
        android:textColorHint="@color/DarkGray"
        android:textSize="18sp"
        android:textColor="@color/Black"
        android:inputType="textNoSuggestions"
        android:padding="10dp"
        android:background="@drawable/txt_shape"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/tvFirstName"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:padding="10dp"
        android:background="@drawable/txt_non_editable"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="12dp"
        android:layout_below="@id/txtLastName"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:background="@drawable/txt_non_editable"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/tvBirthDate"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_address"
        android:textColorHint="@color/DarkGray"
        android:textSize="18sp"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:inputType="textPostalAddress"
        android:background="@drawable/txt_shape"
        android:layout_below="@+id/tvBirthDate"
        android:layout_alignStart="@+id/tvBirthDate"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        android:textColorHint="@color/DarkGray"
        android:textSize="18sp"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:inputType="phone"
        android:background="@drawable/txt_shape"
        android:layout_below="@+id/txtAddress"
        android:layout_alignStart="@+id/txtAddress"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdateProfile"
        android:textSize="16sp"
        android:textColor="@color/Black"
        android:padding="10dp"
        android:background="@drawable/btn_shape_selector"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

</RelativeLayout>

